// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#createGrid should create a 4n grid - snapshot 1`] = `
 [
  {
    "res": [
      "4nt",
      "4n",
    ],
    "time": 0,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 320,
  },
  {
    "res": [
      "4n",
    ],
    "time": 480,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 640,
  },
]
`;

exports[`#createGrid should create a 4n grid 1`] = `
 [
  {
    "res": [
      "4nt",
      "4n",
    ],
    "time": 0,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 320,
  },
  {
    "res": [
      "4n",
    ],
    "time": 480,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 640,
  },
  {
    "res": [
      "4nt",
      "4n",
    ],
    "time": 960,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 1280,
  },
  {
    "res": [
      "4n",
    ],
    "time": 1440,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 1600,
  },
  {
    "res": [
      "4nt",
      "4n",
    ],
    "time": 1920,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 2240,
  },
  {
    "res": [
      "4n",
    ],
    "time": 2400,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 2560,
  },
  {
    "res": [
      "4nt",
      "4n",
    ],
    "time": 2880,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 3200,
  },
  {
    "res": [
      "4n",
    ],
    "time": 3360,
  },
  {
    "res": [
      "4nt",
    ],
    "time": 3520,
  },
]
`;

exports[`#createGrid should create a 8n, 7/8 grid - snapshot 1`] = `
 [
  {
    "res": [
      "8nt",
      "8n",
    ],
    "time": 0,
  },
  {
    "res": [
      "8nt",
    ],
    "time": 160,
  },
  {
    "res": [
      "8n",
    ],
    "time": 240,
  },
  {
    "res": [
      "8nt",
    ],
    "time": 320,
  },
  {
    "res": [
      "8nt",
      "8n",
    ],
    "time": 480,
  },
  {
    "res": [
      "8nt",
    ],
    "time": 640,
  },
  {
    "res": [
      "8n",
    ],
    "time": 720,
  },
  {
    "res": [
      "8nt",
    ],
    "time": 800,
  },
  {
    "res": [
      "8nt",
      "8n",
    ],
    "time": 960,
  },
  {
    "res": [
      "8nt",
    ],
    "time": 1120,
  },
  {
    "res": [
      "8n",
    ],
    "time": 1200,
  },
  {
    "res": [
      "8nt",
    ],
    "time": 1280,
  },
  {
    "res": [
      "8nt",
      "8n",
    ],
    "time": 1440,
  },
]
`;
